fix: hide scrollbar from login and reg

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,3 +135,14 @@
 .custom-scroll::-webkit-scrollbar-button {
   display: none;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  width: 0;
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: 0;  /* Firefox */
+}
